Update API controller with result fields
Add result fields in json builder and documentation
