# app/controllers/api/v1/planning_applications_controller.rb
@@ -36,6 +36,7 @@ class Api::V1::PlanningApplicationsController < Api::V1::ApplicationController
       ),
     )
     @planning_application.assign_attributes(site_params) if site_params.present?
+    @planning_application.assign_attributes(result_params) if result_params.present?
 
     if @planning_application.valid? && @planning_application.save!
       upload_documents(params[:files])
@@ -113,6 +114,15 @@ private
         address_2: params[:site][:address_2],
         town: params[:site][:town],
         postcode: params[:site][:postcode] }
+    end
+  end
+
+  def result_params
+    if params[:result]
+      { result_flag: params[:result][:flag],
+        result_heading: params[:result][:heading],
+        result_description: params[:result][:description],
+        result_override: params[:result][:override] }
     end
   end
 
